--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -1,3 +1,4 @@
+/*src/styles/chat.css*/
 .container {
   display: flex;
   height: 100vh;
@@ -11,14 +12,35 @@
   display: flex;
   flex: 1;
   min-height: 0;
+  overflow: hidden
 }
 
 .params-sidebar {
-  width: 300px;
+  width: 250px;
   background: #3A53A3;
   padding: 20px;
   border-right: 4px solid #000000;
   overflow-y: auto;
+  flex-shrink: 0;
+}
+
+.finalize-button {
+  display: block;
+  width: 100%;
+  padding: 12px;
+  margin-top: 20px;
+  background-color: #000000;
+  color: #fdbb11;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+  font-size: 16px;
+}
+
+.finalize-button:hover {
+  background-color: #fdbb11;
+  color: #000000;
 }
 
 .params-sidebar h2 {
@@ -57,14 +79,16 @@
   flex-direction: column;
   background-color: #41C1CF;
   min-height: 0;
+  overflow: hidden;
 }
 
 .header {
   background-color: #000000;
-  padding: 1rem;
+  /*padding: 1rem;*/
   text-align: left;
-  border-bottom: 4px solid #000000;
+  /*border-bottom: 4px solid #000000;*/
   width: 100%;
+  flex-shrink:0;
 }
 
 .logo {
@@ -84,11 +108,13 @@
   flex-direction: column;
   padding: 20px;
   background: #41C1CF;
+  overflow-y: auto;
 }
 
 .chat-messages {
   flex: 1;
   overflow-y: auto;
+  overflow-x: hidden;
   padding: 20px;
   border: 4px solid #000000;
   border-radius: 10px;
